# NMCH

./: CMakeLists.txt  README.md  heatmap.py
include/NMCH/methods/: NMCH.hpp  NMCH_EM.hpp  NMCH_FE.hpp  NMCH_fw_euler.hpp
include/NMCH/random/: random.hpp
include/NMCH/utils/: cu_utils.hpp  utils.hpp
playbooks/: FirstTry.cu  distribution.cu  plot.py  project.ipynb  versionPlot.cu
profilings/: FE_B_MMng  timings.txt
references/firstLab/: MC.cu
references/project_description/: MC.cu
src/NMCH/methods/: NMCH.cpp  NMCH.cu  NMCH_EM.cu  NMCH_FE.cu  NMCH_fw_euler.cu
src/NMCH/random/: random.cu
src/NMCH/test/: exploration.cu  nmch.cu  test.cpp  test.cu
src/NMCH/utils/: cu_utils.cu  utils.cpp  utils.cu
